# i-ching-rs

./: Cargo.toml  README.md
src/: main.rs
templates/: about.html  base.html  input.html  throw.html
